--- a/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
+++ b/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="InputFiles\Input4_1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="InputFiles\Input3_2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
