--- a/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
+++ b/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
@@ -17,6 +17,9 @@
     <None Update="InputFiles\Input3_1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="InputFiles\Input9_1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="InputFiles\Input8_1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
