--- a/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
+++ b/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
@@ -20,6 +20,12 @@
     <None Update="InputFiles\input15_1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="InputFiles\input16_1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="InputFiles\input16_1_ex.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="InputFiles\input15_1_ex.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
