day19 trainwreck of code

--- a/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
+++ b/AoC2022-linqAbuse/ConsoleApp1/ConsoleApp1.csproj
@@ -29,6 +29,12 @@
     <None Update="InputFiles\input18_1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="InputFiles\input19_1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="InputFiles\input19_1_ex.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="InputFiles\input18_1_ex.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
